fixed chatbox height on mobile note: doesn't look right on desktop

--- a/app/assets/stylesheets/pages/_chatroom.scss
+++ b/app/assets/stylesheets/pages/_chatroom.scss
@@ -79,7 +79,7 @@
 }
 
 .chatroom {
-  height: 80vh;
+  height: 65vh;
   overflow: scroll;
   .sub-heading {
     text-align: center;
